[gd_scene load_steps=4 format=3 uid="uid://bb6kp00inaup1"]

[ext_resource type="Script" path="res://Scenes/Func/Move/move.gd" id="1_7itvk"]
[ext_resource type="Script" path="res://Scenes/Func/Move/move_control/move_control.gd" id="2_ya3rg"]
[ext_resource type="Script" path="res://Scenes/Func/PathFinder/EntityPathFinder/entity_path_finder.gd" id="3_3nysb"]

[node name="Move" type="Node2D"]
script = ExtResource("1_7itvk")

[node name="MoveCast" type="Node2D" parent="."]

[node name="WallCheck" type="Node2D" parent="MoveCast"]

[node name="WallRightDownCheck" type="RayCast2D" parent="MoveCast/WallCheck"]
unique_name_in_owner = true
position = Vector2(0, -4)
target_position = Vector2(10, -0.25)

[node name="WallRightUpCheck" type="RayCast2D" parent="MoveCast/WallCheck"]
unique_name_in_owner = true
position = Vector2(0, -20)
target_position = Vector2(10, -0.25)

[node name="WallLeftDownCheck" type="RayCast2D" parent="MoveCast/WallCheck"]
unique_name_in_owner = true
position = Vector2(0, -4)
target_position = Vector2(-10, -0.25)

[node name="WallLeftUpCheck" type="RayCast2D" parent="MoveCast/WallCheck"]
unique_name_in_owner = true
position = Vector2(0, -20)
target_position = Vector2(-10, -0.25)

[node name="LadderCheck" type="RayCast2D" parent="MoveCast"]
unique_name_in_owner = true
position = Vector2(0, -4)
exclude_parent = false
target_position = Vector2(0, 8)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="WaterCheck" type="RayCast2D" parent="MoveCast"]
unique_name_in_owner = true
position = Vector2(0, -4)
exclude_parent = false
target_position = Vector2(0, 6)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="MoveControl" type="Node" parent="." node_paths=PackedStringArray("move")]
unique_name_in_owner = true
script = ExtResource("2_ya3rg")
move = NodePath("..")

[node name="EntityPathFinder" type="Node" parent="MoveControl"]
script = ExtResource("3_3nysb")

[node name="ClampJumpTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="ClampJumpTimer" to="." method="_on_clamp_jump_timer_timeout"]
